edit SecurityConfig, CustomCorsFilter, SummaryController